Removed empty submodules folders

--- a/react-sample-project/src/components/Lesson.css
+++ b/react-sample-project/src/components/Lesson.css
@@ -2,7 +2,7 @@
     width: 33%;
     margin-right: 24px;
     text-align: center;
-    box-shadow: 0 0 6px #e8e8e8;
+    box-shadow: 0 0 6px #333;
     background-color: #fff;
     cursor: pointer;
   }
