--- a/react-sample-project/src/index.css
+++ b/react-sample-project/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@media screen and (max-width: 767px){
+  body{
+    margin:0 20px;
+  }
+}
